--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0b077f2
+	base = ba25899
 	trimbase = 
 	parent = release/hydro/robot_upstart
-	previous = 
+	previous = 0b077f2
