--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bcf9185
+	base = d7e6d2d
 	trimbase = 
 	parent = debian/hydro/robot_upstart
-	previous = 
+	previous = bcf9185
