--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bcf9185
+	base = 683829b
 	trimbase = 
 	parent = debian/hydro/robot_upstart
-	previous = 
+	previous = bcf9185
