--- a/tracks.yaml
+++ b/tracks.yaml
@@ -9,9 +9,10 @@ tracks:
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
       -i :{release_inc}
     devel_branch: !!python/unicode 'hydro-devel'
+    last_version: 0.0.2
     name: !!python/unicode 'robot_upstart'
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: !!python/unicode 'https://github.com/clearpath-gbp/robot_upstart-release.git'
     release_tag: :{version}
     ros_distro: hydro
