--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e21c68f
+	base = caad065
 	trimbase = 
 	parent = release/indigo/robot_upstart
-	previous = 
+	previous = e21c68f
