--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 228e019
+	base = 3ae13f7
 	trimbase = 
 	parent = debian/indigo/robot_upstart
-	previous = 
+	previous = 228e019
