--- a/tracks.yaml
+++ b/tracks.yaml
@@ -29,9 +29,10 @@ tracks:
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
       -i :{release_inc}
     devel_branch: indigo-devel
+    last_version: 0.0.6
     name: robot_upstart
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: https://github.com/clearpath-gbp/robot_upstart-release.git
     release_tag: :{version}
     ros_distro: indigo
