--- a/tracks.yaml
+++ b/tracks.yaml
@@ -28,7 +28,9 @@ tracks:
     - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
     - git-bloom-generate -y rosdebian --prefix release/:{ros_distro} :{ros_distro}
       -i :{release_inc}
-    devel_branch: hydro-devel
+    - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
+      :{release_inc}
+    devel_branch: indigo-devel
     last_version: 0.0.6
     name: robot_upstart
     patches: null
