--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>robot_upstart</name>
-  <version>0.1.1</version>
+  <version>0.1.2</version>
   <description>
     The robot_upstart package provides scripts which may be used to install
     and uninstall Ubuntu Linux upstart jobs which launch groups of roslaunch files.
@@ -17,6 +17,7 @@
   <run_depend>daemontools</run_depend>
   <run_depend>roslaunch</run_depend>
   <run_depend>xacro</run_depend>
+  <test_depend>rosunit</test_depend>
 
   <export>
     <architecture_independent/>
