--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bde3a1d
+	base = 8af3644
 	trimbase = 
 	parent = debian/jade/robot_upstart
-	previous = 
+	previous = bde3a1d
