--- a/tracks.yaml
+++ b/tracks.yaml
@@ -77,9 +77,10 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: jade-devel
+    last_version: 0.2.0
     name: robot_upstart
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: https://github.com/clearpath-gbp/robot_upstart-release.git
     release_tag: :{version}
     ros_distro: jade
