--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bef73d2
+	base = bc518f6
 	trimbase = 
 	parent = release/indigo/robot_upstart
-	previous = 
+	previous = bef73d2
