--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d06cfd
+	base = 4088e39
 	trimbase = 
 	parent = rpm/indigo/robot_upstart
-	previous = 
+	previous = 6d06cfd
