--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0af63c
+	base = 38ae9ab
 	trimbase = 
 	parent = release/jade/robot_upstart
-	previous = 
+	previous = f0af63c
