--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5fb21a7
+	base = e229215
 	trimbase = 
 	parent = rpm/jade/robot_upstart
-	previous = 
+	previous = 5fb21a7
